# sustainable-gh-workflow-linter

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: auto-version.yml  build-and-release-binaries.yml  make-latest-release.yml  test-and-typecheck.yml
docs/: index.html
hooks/: hook-suslint.rules.py
suslint/: cli.py  core.py  ignore_comments.py  position.py  rule.py  workflow.py
suslint/rules/: artifact_reuse.py  concurrent_jobs.py  dependency_caching.py  duplicate_jobs.py  job_timeout.py  matrix_builds.py  monolith_workflow.py  parallelization.py  push_to_all_branches.py  shallow_clone.py
tests/: test_artifact_reuse.py  test_cli.py  test_concurrent_jobs.py  test_core.py  test_dependency_caching.py  test_duplicate_jobs.py  test_ignore_comments.py  test_matrix_builds.py  test_monolith_workflow.py  test_parallelization.py  test_shallow_clone.py
website/: index.html
